new arabic words

--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,37 @@
   {"tense1": "impressionner", "tense2": "أَبْهَرَ/يُبْهِرُ/إِبْهَار/أَبْهِرْ/يُبْهَرُ/أُبْهِرَ", "type": "verb"},
   {"tense1": "piller", "tense2": "نَهَبَ/يَنْهَبُ/نَهْب/اِنْهَبْ/يُنْهَبُ/نُهِبَ", "type": "verb"},
   {"tense1": "sauf si", "tense2": "إِلَّا إِذَا", "type": "sentence"},
-  {"tense1": "Obsédé", "tense2": "مَهْوُوس/مَهْوُوسُونَ/مَهْوُوسَانِ/مَهْوُوسِينَ/مَهْوُوسَيْنِ", "type": "word"}
+  {"tense1": "Obsédé", "tense2": "مَهْوُوس/مَهْوُوسُونَ/مَهْوُوسَانِ/مَهْوُوسِينَ/مَهْوُوسَيْنِ", "type": "word"},
+  {"tense1": "erreur", "tense2": "غَلَط / أَغْلَاط / غَلَطَانِ / أَغْلَاطًا / غَلَطَيْنِ", "type": "word"},
+    {"tense1": "laboratoire", "tense2": "مُخْتَبَر / مُخْتَبَرَات / مُخْتَبَرَانِ / مُخْتَبَرَاتٍ / مُخْتَبَرَيْنِ", "type": "word"},
+    {"tense1": "piquer", "tense2": "لَدَغَ / يَلْدِغُ / لَدْغٌ / اِلْدِغْ / يُلْدَغُ / أُلْدِغَ", "type": "verb"},
+    {"tense1": "accumuler", "tense2": "تَرَاكَمَ / يَتَرَاكَمُ / تَرَاكُمٌ / تَرَاكَمْ / يُتَرَاكَمُ / تُورَاكِمَ", "type": "verb"},
+    {"tense1": "monument", "tense2": "صَرْح / صُرُوح / صَرْحَانِ / صُرُوحًا / صَرْحَيْنِ", "type": "word"},
+    {"tense1": "stabiliser", "tense2": "ثَبَتَ / يَثْبُتُ / ثَبَاتٌ / ثَبِّتْ / يُثْبَتُ / أُثْبِتَ", "type": "verb"},
+    {"tense1": "remède", "tense2": "تِرْيَاق / تَرَايِيق / تِرْيَاقَانِ / تَرَاوِيقًا / تِرْيَاقَيْنِ", "type": "word"},
+    {"tense1": "loyal", "tense2": "مُخْلِص / مُخْلِصُون / مُخْلِصَانِ / مُخْلِصِينَ / مُخْلِصَيْنِ", "type": "word"},
+    {"tense1": "pur", "tense2": "خَالِص / خُلَّص / خَالِصَانِ / خُلَّصًا / خَالِصَيْنِ", "type": "word"},
+    {"tense1": "santé", "tense2": "عَافِيَة / عَوَافٍ / عَافِيَتَانِ / عَوَافِيَ / عَافِيَتَيْنِ", "type": "word"},
+    {"tense1": "en fonction de", "tense2": "تَبَعًا لِـ", "type": "sentence"},
+    {"tense1": "solide", "tense2": "صَلْب / صُلْبَان / صَلْبَانِ / صُلْبَانًا / صَلْبَيْنِ", "type": "word"},
+    {"tense1": "couloir", "tense2": "دِهْلِيز / دَهَالِيز / دِهْلِيزَانِ / دَهَالِيزًا / دِهْلِيزَيْنِ", "type": "word"},
+    {"tense1": "égaler", "tense2": "ضَاهَى / يُضَاهِي / مُضَاهَاةٌ / ضَاهِ / يُضَاهَى / ضُوهِيَ", "type": "verb"},
+    {"tense1": "familier", "tense2": "مَأْلُوف / مَآلِيف / مَأْلُوفَانِ / مَآلِيفًا / مَأْلُوفَيْنِ", "type": "word"},
+    {"tense1": "accomplir", "tense2": "أَنْجَزَ / يُنْجِزُ / إِنْجَازٌ / أَنْجِزْ / يُنْجَزُ / أُنْجِزَ", "type": "verb"},
+    {"tense1": "reprocher", "tense2": "نَسَبَ / يَنْسِبُ / نِسْبَةٌ / انْسِبْ / يُنْسَبُ / نُسِبَ", "type": "verb"},
+    {"tense1": "bosse", "tense2": "سِنَام / سُنُوم / سِنَامَانِ / سُنُومًا / سِنَامَيْنِ", "type": "word"},
+    {"tense1": "en avoir marre", "tense2": "مَلَّ / يَمَلُّ / مَلَلٌ / مُلَّ / يُمَلُّ / مُلَّ", "type": "verb"},
+    {"tense1": "effacer", "tense2": "مَسَحَ / يَمْسَحُ / مَسْحٌ / امْسَحْ / يُمْسَحُ / مُسِحَ", "type": "verb"},
+    {"tense1": "animal/bête", "tense2": "دَابَّة / دَوَابُّ / دَابَّتَانِ / دَوَابَّ / دَابَّتَيْنِ", "type": "word"},
+    {"tense1": "continuer", "tense2": "ظَلَّ / يَظِلُّ / ظُلُولٌ / ظَلِّ / يُظَلُّ / ظُلَّ", "type": "verb"},
+    {"tense1": "prétendre", "tense2": "زَعَمَ / يَزْعُمُ / زَعْمٌ / اِزْعُمْ / يُزْعَمُ / زُعِمَ", "type": "verb"},
+    {"tense1": "expérience", "tense2": "خِبْرَة / خِبْرَات / خِبْرَتَانِ / خِبْرَاتٍ / خِبْرَتَيْنِ", "type": "word"},
+    {"tense1": "sous-estimer", "tense2": "اِسْتَخَفَّ بِـ / يَسْتَخِفُّ بِـ / اِسْتِخْفَافٌ / اِسْتَخِفَّ بِـ / يُسْتَخَفُّ بِـ / اُسْتُخِفَّ بِـ", "type": "verb"},
+    {"tense1": "inspirer", "tense2": "اِسْتَوْحَى / يَسْتَوْحِي / اِسْتِيحَاءٌ / اِسْتَوْحِ / يُسْتَوْحَى / اُسْتُوحِيَ", "type": "verb"},
+    {"tense1": "ruine", "tense2": "خَرَاب / خَرَابَات / خَرَابَانِ / خَرَابَاتٍ / خَرَابَيْنِ", "type": "word"},
+    {"tense1": "perdre la raison", "tense2": "فَقَدَ صَوَابَهُ / يَفْقِدُ صَوَابَهُ / فِقْدَانُ صَوَابِهِ / أَفْقِدْ صَوَابَكَ / يُفْقَدُ صَوَابُهُ / فُقِدَ صَوَابُهُ", "type": "sentence"},
+    {"tense1": "parti politique", "tense2": "حِزْب / أَحْزَاب / حِزْبَانِ / أَحْزَابًا / حِزْبَيْنِ", "type": "sentence"},
+    {"tense1": "envahir", "tense2": "اِحْتَلَّ / يَحْتَلُّ / اِحْتِلَالٌ / اِحْتَلِّ / يُحْتَلُّ / اُحْتُلَّ", "type": "verb"}
 ];
 
 
