new arabic word

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
   {"tense1": "Brillant/génial", "tense2": "عَبْقَرِيّ / عَبَاقِرَة / عَبْقَرِيَّانِ / عَبَاقِرَةً / عَبْقَرِيَّيْنِ", "type": "word"},
   {"tense1": "Faire / Rendre", "tense2": "جَعَلَ/يَجْعَلُ/جَعْل/اِجْعَلْ/يُجْعَلُ/جُعِلَ", "type": "verb"},
   {"tense1": "Oser", "tense2": "تَجَرَّأَ/يَتَجَرَّأُ/تَجَرُّؤ/تَجَرَّأْ/يُتَجَرَّأُ/تُجُرِّئَ", "type": "verb"},
-  {"tense1": "Requérir", "tense2": "اِسْتَدْعَى/يَسْتَدْعِي/اِسْتِدْعَاء/اِسْتَدْعِ/يُسْتَدْعَى/اُسْتُدْعِيَ", "type": "verb"},
+  {"tense1": "Convoquer", "tense2": "اِسْتَدْعَى/يَسْتَدْعِي/اِسْتِدْعَاء/اِسْتَدْعِ/يُسْتَدْعَى/اُسْتُدْعِيَ", "type": "verb"},
   {"tense1": "Continuer", "tense2": "اِسْتَمَرَّ/يَسْتَمِرُّ/اِسْتِمْرَار/اِسْتَمِرَّ/يُسْتَمَرُّ/اُسْتُمِرَّ", "type": "verb"},
   {"tense1": "Débattre", "tense2": "نَاقَشَ/يُنَاقِشُ/مُنَاقَشَة/نَاقِشْ/يُنَاقَشُ/نُوقِشَ", "type": "verb"},
   {"tense1": "Ranger", "tense2": "رَتَّبَ/يُرَتِّبُ/تَرْتِيب/رَتِّبْ/يُرَتَّبُ/رُتِّبَ", "type": "verb"},
@@ -1765,7 +1765,33 @@
     {"tense1": "ruine", "tense2": "خَرَاب / خَرَابَات / خَرَابَانِ / خَرَابَاتٍ / خَرَابَيْنِ", "type": "word"},
     {"tense1": "perdre la raison", "tense2": "فَقَدَ صَوَابَهُ / يَفْقِدُ صَوَابَهُ / فِقْدَانُ صَوَابِهِ / أَفْقِدْ صَوَابَكَ / يُفْقَدُ صَوَابُهُ / فُقِدَ صَوَابُهُ", "type": "sentence"},
     {"tense1": "parti politique", "tense2": "حِزْب / أَحْزَاب / حِزْبَانِ / أَحْزَابًا / حِزْبَيْنِ", "type": "sentence"},
-    {"tense1": "envahir", "tense2": "اِحْتَلَّ / يَحْتَلُّ / اِحْتِلَالٌ / اِحْتَلِّ / يُحْتَلُّ / اُحْتُلَّ", "type": "verb"}
+    {"tense1": "envahir", "tense2": "اِحْتَلَّ / يَحْتَلُّ / اِحْتِلَالٌ / اِحْتَلِّ / يُحْتَلُّ / اُحْتُلَّ", "type": "verb"},
+    {"tense1": "Personne âgée", "tense2": "مُسِنٌّ / مُسِنُّونَ / مُسِنَّانِ / مُسِنِّينَ / مُسِنَّيْنِ", "type": "word"},
+  {"tense1": "Sourd", "tense2": "أَصَمُّ / صُمٌّ / أَصَمَّانِ / صُمًّا / أَصَمَّيْنِ", "type": "word"},
+  {"tense1": "Salutation", "tense2": "تَحِيَّةٌ / تَحِيَّاتٌ / تَحِيَّتَانِ / تَحِيَّاتٍ / تَحِيَّتَيْنِ", "type": "word"},
+  {"tense1": "De la part de", "tense2": "بِالنِّيَابَةِ عَنْ", "type": "sentence"},
+  {"tense1": "Délicieux", "tense2": "شَهِيٌّ / شَهِيُّونَ / شَهِيَّانِ / شَهِيِّينَ / شَهِيَّيْنِ", "type": "word"},
+  {"tense1": "Politesse", "tense2": "أَدَبٌ / آدَابٌ / أَدَبَانِ / آدَابٍ / أَدَبَيْنِ", "type": "word"},
+  {"tense1": "Duel", "tense2": "مُبَارَزَةٌ / مُبَارَزَاتٌ / مُبَارَزَتَانِ / مُبَارَزَاتٍ / مُبَارَزَتَيْنِ", "type": "word"},
+  {"tense1": "Virginité", "tense2": "عُذْرِيَّةٌ / عُذْرِيَّاتٌ / عُذْرِيَّتَانِ / عُذْرِيَّاتٍ / عُذْرِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Projectile / Balle", "tense2": "رَصَاصَةٌ / رَصَاصَاتٌ / رَصَاصَتَانِ / رَصَاصَاتٍ / رَصَاصَتَيْنِ", "type": "word"},
+  {"tense1": "Ambigu", "tense2": "مُبْهَمٌ / مُبْهَمُونَ / مُبْهَمَانِ / مُبْهَمِينَ / مُبْهَمَيْنِ", "type": "word"},
+  {"tense1": "Quartier général", "tense2": "مَقَرٌّ / مَقَارُّ / مَقَرَّانِ / مَقَارِّ / مَقَرَّيْنِ", "type": "word"},
+  {"tense1": "Arrestation", "tense2": "اِعْتِقَالٌ / اِعْتِقَالَاتٌ / اِعْتِقَالَانِ / اِعْتِقَالَاتٍ / اِعْتِقَالَيْنِ", "type": "word"},
+  {"tense1": "Se priver de", "tense2": "حُرِمَ / يُحْرَمُ / حِرْمَانٌ / اِحْرِمْ / يُحْرَمُ / حُرِمَ", "type": "verb"},
+  {"tense1": "Se cogner", "tense2": "اِرْتَطَمَ / يَرْتَطِمُ / اِرْتِطَامٌ / اِرْتَطِمْ / يُرْتَطَمُ / اُرْتُطِمَ", "type": "verb"},
+  {"tense1": "Jouir de", "tense2": "تَمَتَّعَ / يَتَمَتَّعُ / تَمَتُّعٌ / تَمَتَّعْ / يُتَمَتَّعُ / تُمُتِّعَ", "type": "verb"},
+  {"tense1": "Dissimuler", "tense2": "أَخْفَى / يُخْفِي / إِخْفَاءٌ / أَخْفِ / يُخْفَى / أُخْفِيَ", "type": "verb"},
+  {"tense1": "Valoir", "tense2": "سَاوَى / يُسَاوِي / مُسَاوَاةٌ / سَاوِ / يُسَاوَى / سُوِيَ", "type": "verb"},
+  {"tense1": "Avaler", "tense2": "اِبْتَلَعَ / يَبْتَلِعُ / اِبْتِلَاعٌ / اِبْتَلِعْ / يُبْتَلَعُ / اُبْتُلِعَ", "type": "verb"},
+  {"tense1": "Se fissurer", "tense2": "تَشَقَّقَ / يَتَشَقَّقُ / تَشَقُّقٌ / تَشَقَّقْ / يُتَشَقَّقُ / تُشُقِّقَ", "type": "verb"},
+  {"tense1": "Respirer", "tense2": "اِسْتَنْشَقَ / يَسْتَنْشِقُ / اِسْتِنْشَاقٌ / اِسْتَنْشِقْ / يُسْتَنْشَقُ / اُسْتُنْشِقَ", "type": "verb"},
+  {"tense1": "Interdire", "tense2": "حَرَمَ / يَحْرِمُ / حِرْمَانٌ / اِحْرِمْ / يُحْرَمُ / حُرِمَ", "type": "verb"},
+  {"tense1": "Faire du chantage", "tense2": "اِبْتَزَّ / يَبْتَزُّ / اِبْتِزَازٌ / اِبْتَزَّ / يُبْتَزُّ / اُبْتُزَّ", "type": "verb"},
+  {"tense1": "Affecter", "tense2": "طَالَ / يَطُولُ / طَوْلٌ / طُلْ / يُطَالُ / طُووِلَ", "type": "verb"},
+  {"tense1": "Donner lieu", "tense2": "أَسْفَرَ / يُسْفِرُ / إِسْفَارٌ / أَسْفِرْ / يُسْفَرُ / أُسْفِرَ", "type": "verb"},
+  {"tense1": "Expulser", "tense2": "رَحَّلَ / يُرَحِّلُ / تَرْحِيلٌ / رَحِّلْ / يُرَحَّلُ / رُحِّلَ", "type": "verb"},
+  {"tense1": "Attirer l’attention", "tense2": "لَفَتَ الاِنْتِبَاهَ / يَلْفِتُ الاِنْتِبَاهَ / لَفْتُ الاِنْتِبَاهِ / لَفِتْ الاِنْتِبَاهَ / يُلْفَتُ الاِنْتِبَاهُ / لُفِتَ الاِنْتِبَاهُ", "type": "verb"}
 ];
 
 
