new arabic word

--- a/index.html
+++ b/index.html
@@ -1791,8 +1791,38 @@
   {"tense1": "Affecter", "tense2": "طَالَ / يَطُولُ / طَوْلٌ / طُلْ / يُطَالُ / طُووِلَ", "type": "verb"},
   {"tense1": "Donner lieu", "tense2": "أَسْفَرَ / يُسْفِرُ / إِسْفَارٌ / أَسْفِرْ / يُسْفَرُ / أُسْفِرَ", "type": "verb"},
   {"tense1": "Expulser", "tense2": "رَحَّلَ / يُرَحِّلُ / تَرْحِيلٌ / رَحِّلْ / يُرَحَّلُ / رُحِّلَ", "type": "verb"},
-  {"tense1": "Attirer l’attention", "tense2": "لَفَتَ الاِنْتِبَاهَ / يَلْفِتُ الاِنْتِبَاهَ / لَفْتُ الاِنْتِبَاهِ / لَفِتْ الاِنْتِبَاهَ / يُلْفَتُ الاِنْتِبَاهُ / لُفِتَ الاِنْتِبَاهُ", "type": "verb"}
+  {"tense1": "Attirer l’attention", "tense2": "لَفَتَ الاِنْتِبَاهَ / يَلْفِتُ الاِنْتِبَاهَ / لَفْتُ الاِنْتِبَاهِ / لَفِتْ الاِنْتِبَاهَ / يُلْفَتُ الاِنْتِبَاهُ / لُفِتَ الاِنْتِبَاهُ", "type": "verb"},
+  {"tense1":"administration","tense2":"إِدَارَةٌ/إِدَارَاتٌ/إِدَارَتَانِ/إِدَارَاتٍ/إِدَارَتَيْنِ","type":"word"},
+  {"tense1":"réconciliation","tense2":"المُصَالَحَةُ/مُصَالَحَاتٌ/مُصَالَحَتَانِ/مُصَالَحَاتٍ/مُصَالَحَتَيْنِ","type":"word"},
+  {"tense1":"secteur","tense2":"قِطَاعٌ/قِطَاعَاتٌ/قِطَاعَانِ/قِطَاعَاتٍ/قِطَاعَيْنِ","type":"word"},
+  {"tense1":"train","tense2":"قِطَارٌ/قِطَارَاتٌ/قِطَارَانِ/قِطَارَاتٍ/قِطَارَيْنِ","type":"word"},
+  {"tense1":"frais de douane","tense2":"رَسْمٌ جُمُرْكِيٌّ/رُسُومٌ جُمُرْكِيَّةٌ/رَسْمَانِ جُمُرْكِيَّانِ/رُسُومًا جُمُرْكِيَّةً/رَسْمَيْنِ جُمُرْكِيَّيْنِ","type":"word"},
+  {"tense1":"importation","tense2":"وَارِدَةٌ/وَارِدَاتٌ/وَارِدَتَانِ/وَارِدَاتٍ/وَارِدَتَيْنِ","type":"word"},
+  {"tense1":"cohérent","tense2":"مُتَّسِقٌ/مُتَّسِقُونَ/مُتَّسِقَانِ/مُتَّسِقِينَ/مُتَّسِقَيْنِ","type":"word"},
+  {"tense1":"suspect","tense2":"مُشْتَبَهٌ بِهِ/مُشْتَبَهُونَ بِهِ/مُشْتَبَهَانِ بِهِ/مُشْتَبَهِينَ بِهِ/مُشْتَبَهَيَيْنِ بِهِ","type":"word"},
+  {"tense1":"terrorisme","tense2":"الإِرْهَابُ/إِرْهَابَاتٌ/إِرْهَابَانِ/إِرْهَابَاتٍ/إِرْهَابَيْنِ","type":"word"},
+  {"tense1":"motif","tense2":"دَافِعٌ/دَوَافِعُ/دَافِعَانِ/دَوَافِعَ/دَافِعَيْنِ","type":"word"},
+  {"tense1":"communiqué","tense2":"بَيَانٌ/بَيَانَاتٌ/بَيَانَانِ/بَيَانَاتٍ/بَيَانَيْنِ","type":"word"},
+  {"tense1":"ferme (adj)","tense2":"حَازِمٌ/حَازِمُونَ/حَازِمَانِ/حَازِمِينَ/حَازِمَيْنِ","type":"word"},
+  {"tense1":"adjectif","tense2":"نَعْتٌ/نُعُوتٌ/نَعْتَانِ/نُعُوتٍ/نَعْتَيْنِ","type":"word"},
+  {"tense1":"temporaire","tense2":"مُرَحَّلِيٌّ/مُرَحَّلِيُّونَ/مُرَحَّلِيَّانِ/مُرَحَّلِيِّينَ/مُرَحَّلِيَّيْنِ","type":"word"},
+  {"tense1":"progressivement","tense2":"تَدْرِيجِيًّا/-/-/-/-","type":"word"},
+  {"tense1":"déclaration","tense2":"تَصْرِيحٌ/تَصْرِيحَاتٌ/تَصْرِيحَانِ/تَصْرِيحَاتٍ/تَصْرِيحَيْنِ","type":"word"},
+  {"tense1":"stabilité","tense2":"اسْتِقْرَارٌ/اسْتِقْرَارَاتٌ/اسْتِقْرَارَانِ/اسْتِقْرَارَاتٍ/اسْتِقْرَارَيْنِ","type":"word"},
+  {"tense1":"drogue","tense2":"مُخَدِّرٌ/مُخَدِّرَاتٌ/مُخَدِّرَانِ/مُخَدِّرَاتٍ/مُخَدِّرَيْنِ","type":"word"},
+  {"tense1":"rentable","tense2":"مُرْبِحٌ/مُرْبِحُونَ/مُرْبِحَانِ/مُرْبِحِينَ/مُرْبِحَيْنِ","type":"word"},
+  {"tense1":"médiocre","tense2":"رَدِيءٌ/رَدِيئُونَ/رَدِيئَانِ/رَدِيئِينَ/رَدِيئَيْنِ","type":"word"},
+  {"tense1":"démontrer","tense2":"بَيَّنَ/يُبَيِّنُ/تَبْيِينٌ/بَيِّنْ/يُبَيَّنُ/بُيِّنَ","type":"verb"},
+  {"tense1":"renouveler","tense2":"اسْتَأْنَفَ/يَسْتَأْنِفُ/اسْتِئْنَافٌ/اسْتَأْنِفْ/يُسْتَأْنَفُ/اُسْتُؤْنِفَ","type":"verb"},
+  {"tense1":"dévier","tense2":"حَادَ/يَحِيدُ/حِيَادٌ/حِدْ/يُحَادُ/حُودِ","type":"verb"},
+  {"tense1":"répéter","tense2":"أَعَادَ/يُعِيدُ/إِعَادَةٌ/أَعِدْ/يُعَادُ/أُعِيدَ","type":"verb"},
+  {"tense1":"conclure","tense2":"اختَتَمَ/يَختَتِمُ/اخْتِتَامٌ/اخْتِتِمْ/يُختَتَمُ/اُختُتِمَ","type":"verb"},
+  {"tense1":"diffuser","tense2":"رَوَّجَ/يُرَوِّجُ/تَرْوِيجٌ/رَوِّجْ/يُرَوَّجُ/رُوِّجَ","type":"verb"},
+  {"tense1":"se trouver","tense2":"كَمَنَ/تَكْمُنُ/كُمُونٌ/اكْمُنْ/تُكْمَنُ/كُمِنَ","type":"verb"},
+  {"tense1":"dénoncer","tense2":"نَدَّدَ/يُنَدِّدُ/تَنْدِيدٌ/نَدِّدْ/يُنَدَّدُ/نُدِّدَ","type":"verb"},
+  {"tense1":"réprimer","tense2":"قَمَعَ/يَقْمَعُ/قَمْعٌ/قْمَعْ/يُقْمَعُ/قُمِعَ","type":"verb"}
 ];
+
 
 
 
