new arabic word

--- a/index.html
+++ b/index.html
@@ -1806,7 +1806,7 @@
   {"tense1":"ferme (adj)","tense2":"حَازِمٌ/حَازِمُونَ/حَازِمَانِ/حَازِمِينَ/حَازِمَيْنِ","type":"word"},
   {"tense1":"adjectif","tense2":"نَعْتٌ/نُعُوتٌ/نَعْتَانِ/نُعُوتٍ/نَعْتَيْنِ","type":"word"},
   {"tense1":"temporaire","tense2":"مُرَحَّلِيٌّ/مُرَحَّلِيُّونَ/مُرَحَّلِيَّانِ/مُرَحَّلِيِّينَ/مُرَحَّلِيَّيْنِ","type":"word"},
-  {"tense1":"progressivement","tense2":"تَدْرِيجِيًّا/-/-/-/-","type":"word"},
+  {"tense1":"progressivement","tense2":"تَدْرِيجِيًّا","type":"word"},
   {"tense1":"déclaration","tense2":"تَصْرِيحٌ/تَصْرِيحَاتٌ/تَصْرِيحَانِ/تَصْرِيحَاتٍ/تَصْرِيحَيْنِ","type":"word"},
   {"tense1":"stabilité","tense2":"اسْتِقْرَارٌ/اسْتِقْرَارَاتٌ/اسْتِقْرَارَانِ/اسْتِقْرَارَاتٍ/اسْتِقْرَارَيْنِ","type":"word"},
   {"tense1":"drogue","tense2":"مُخَدِّرٌ/مُخَدِّرَاتٌ/مُخَدِّرَانِ/مُخَدِّرَاتٍ/مُخَدِّرَيْنِ","type":"word"},
