new arabic words

--- a/index.html
+++ b/index.html
@@ -1820,7 +1820,28 @@
   {"tense1":"diffuser","tense2":"رَوَّجَ/يُرَوِّجُ/تَرْوِيجٌ/رَوِّجْ/يُرَوَّجُ/رُوِّجَ","type":"verb"},
   {"tense1":"se trouver","tense2":"كَمَنَ/تَكْمُنُ/كُمُونٌ/اكْمُنْ/تُكْمَنُ/كُمِنَ","type":"verb"},
   {"tense1":"dénoncer","tense2":"نَدَّدَ/يُنَدِّدُ/تَنْدِيدٌ/نَدِّدْ/يُنَدَّدُ/نُدِّدَ","type":"verb"},
-  {"tense1":"réprimer","tense2":"قَمَعَ/يَقْمَعُ/قَمْعٌ/قْمَعْ/يُقْمَعُ/قُمِعَ","type":"verb"}
+  {"tense1":"réprimer","tense2":"قَمَعَ/يَقْمَعُ/قَمْعٌ/قْمَعْ/يُقْمَعُ/قُمِعَ","type":"verb"},
+  {"tense1": "Manipuler", "tense2": "تَلاعَبَ/يَتَلاعَبُ/تَلاعُب/تَلاعَبْ/يُتَلاعَبُ/تُلُوعِبَ", "type": "verb"},
+  {"tense1": "Revenu", "tense2": "إيراد / إيرادات / إيرادان / إيرادات / إيرادين", "type": "word"},
+  {"tense1": "Sous-entender", "tense2": "لَمَّحَ/يُلَمِّحُ/تَلْميح/لَمِّحْ/يُلَمَّحُ/لُمِّحَ", "type": "verb"},
+  {"tense1": "Alimenter/attiser", "tense2": "أَجَّجَ/يُؤَجِّجُ/تَأْجيج/أَجِّجْ/يُؤَجَّجُ/أُجِّجَ", "type": "verb"},
+  {"tense1": "Un facteur", "tense2": "عامِل / عَوامِل / عامِلان / عَوامِل / عامِلَيْن", "type": "word"},
+  {"tense1": "Médias", "tense2": "إعْلام / وَسائِل إعْلام / وَسيلَتا إعْلام / وَسائِل إعْلام / وَسيلَتَي إعْلام", "type": "word"},
+  {"tense1": "Recyclage", "tense2": "إعادَة تَدْوير", "type": "word"},
+  {"tense1": "Déchet", "tense2": "نُفايَة / نُفايات / نُفايَتان / نُفايات / نُفايَتَيْن", "type": "word"},
+  {"tense1": "Objectif/but", "tense2": "غايَة / غايات / غايَتان / غايات / غايَتَيْن", "type": "word"},
+  {"tense1": "Initiative", "tense2": "مُبادَرَة / مُبادَرات / مُبادَرَتان / مُبادَرات / مُبادَرَتَيْن", "type": "word"},
+  {"tense1": "Funérailles", "tense2": "جَنازَة / جَنائِز / جَنازَتان / جَنائِز / جَنازَتَيْن", "type": "word"},
+  {"tense1": "Rituel", "tense2": "طَقْس / طُقوس / طَقْسان / طُقوساً / طَقْسَيْن", "type": "word"},
+  {"tense1": "Chrétien", "tense2": "مَسيحي / مَسيحيّون / مَسيحيّان / مَسيحيّين / مَسيحيَّيْن", "type": "word"},
+  {"tense1": "Contraste", "tense2": "تَبايُن / تَبايُنات / تَبايُنان / تَبايُنات / تَبايُنَيْن", "type": "word"},
+  {"tense1": "Luxe", "tense2": "تَرَف / تُرُف / تَرَفان / تُرُفاً / تَرَفَيْن", "type": "word"},
+  {"tense1": "Reposer en paix", "tense2": "يَرْقُدُ بِسَلام", "type": "sentence"},
+  {"tense1": "Prolonger", "tense2": "أَطالَ/يُطيلُ/إطالَة/أَطِلْ/يُطالُ/أُطيلَ", "type": "verb"},
+  {"tense1": "Décoler", "tense2": "أَقْلَعَ/يُقْلِعُ/إقْلاع/أَقْلِعْ/يُقْلَعُ/أُقْلِعَ", "type": "verb"},
+  {"tense1": "Le manque", "tense2": "اِنْعِدام / اِنْعِدامات / اِنْعِدامان / اِنْعِدامات / اِنْعِدامَيْن", "type": "word"},
+  {"tense1": "Surpasser", "tense2": "فاقَ/يَفوقُ/فَوْق/فُقْ/يُفاقُ/فيقَ", "type": "verb"},
+  {"tense1": "Bilan", "tense2": "حَصيلَة / حَصائِل / حَصيلَتان / حَصائِل / حَصيلَتَيْن", "type": "word"}
 ];
 
 
