new arabic words

--- a/index.html
+++ b/index.html
@@ -1823,7 +1823,7 @@
   {"tense1":"réprimer","tense2":"قَمَعَ/يَقْمَعُ/قَمْعٌ/قْمَعْ/يُقْمَعُ/قُمِعَ","type":"verb"},
   {"tense1": "Manipuler", "tense2": "تَلاعَبَ/يَتَلاعَبُ/تَلاعُب/تَلاعَبْ/يُتَلاعَبُ/تُلُوعِبَ", "type": "verb"},
   {"tense1": "Revenu", "tense2": "إيراد / إيرادات / إيرادان / إيرادات / إيرادين", "type": "word"},
-  {"tense1": "Sous-entender", "tense2": "لَمَّحَ/يُلَمِّحُ/تَلْميح/لَمِّحْ/يُلَمَّحُ/لُمِّحَ", "type": "verb"},
+  {"tense1": "Sous-entendre", "tense2": "لَمَّحَ/يُلَمِّحُ/تَلْميح/لَمِّحْ/يُلَمَّحُ/لُمِّحَ", "type": "verb"},
   {"tense1": "Alimenter/attiser", "tense2": "أَجَّجَ/يُؤَجِّجُ/تَأْجيج/أَجِّجْ/يُؤَجَّجُ/أُجِّجَ", "type": "verb"},
   {"tense1": "Un facteur", "tense2": "عامِل / عَوامِل / عامِلان / عَوامِل / عامِلَيْن", "type": "word"},
   {"tense1": "Médias", "tense2": "إعْلام / وَسائِل إعْلام / وَسيلَتا إعْلام / وَسائِل إعْلام / وَسيلَتَي إعْلام", "type": "word"},
