--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,21 @@
   {"tense1": "Décoler", "tense2": "أَقْلَعَ/يُقْلِعُ/إقْلاع/أَقْلِعْ/يُقْلَعُ/أُقْلِعَ", "type": "verb"},
   {"tense1": "Le manque", "tense2": "اِنْعِدام / اِنْعِدامات / اِنْعِدامان / اِنْعِدامات / اِنْعِدامَيْن", "type": "word"},
   {"tense1": "Surpasser", "tense2": "فاقَ/يَفوقُ/فَوْق/فُقْ/يُفاقُ/فيقَ", "type": "verb"},
-  {"tense1": "Bilan", "tense2": "حَصيلَة / حَصائِل / حَصيلَتان / حَصائِل / حَصيلَتَيْن", "type": "word"}
+  {"tense1": "Bilan", "tense2": "حَصيلَة / حَصائِل / حَصيلَتان / حَصائِل / حَصيلَتَيْن", "type": "word"},
+  {"tense1": "autisme", "tense2": "تَوَحُّد / تَوَحُّدات / تَوَحُّدان / تَوَحُّدات / تَوَحُّدَيْن", "type": "word"},
+  {"tense1": "censure", "tense2": "رَقابَة / رَقابات / رَقابَتان / رَقاباتٍ / رَقابَتَيْن", "type": "word"},
+  {"tense1": "scandale", "tense2": "فَضيحَة / فَضائِح / فَضيحَتان / فَضائِحَ / فَضيحَتَيْن", "type": "word"},
+  {"tense1": "Harceler", "tense2": "تَحَرَّشَ / يَتَحَرَّش / تَحَرُّش / تَحَرَّشْ / مُتَحَرَّش بِه / مُتَحَرَّش بِه", "type": "verb"},
+  {"tense1": "corruption", "tense2": "فَساد / أَفْسِدَة / فَسادان / أَفْسِدَة / فَسادَيْن", "type": "word"},
+  {"tense1": "famine", "tense2": "مَجاعَة / مَجاعات / مَجاعَتان / مَجاعاتٍ / مَجاعَتَيْن", "type": "word"},
+  {"tense1": "indicateur", "tense2": "مُؤَشِّر / مُؤَشِّرات / مُؤَشِّران / مُؤَشِّراتٍ / مُؤَشِّرَيْن", "type": "word"},
+  {"tense1": "reconnaissant", "tense2": "مُمْتَنّ / مُمْتَنّون / مُمْتَنّان / مُمْتَنّين / مُمْتَنَّيْن", "type": "word"},
+  {"tense1": "S'efforcer de", "tense2": "سَعى / يَسْعى / سَعْي / اِسْعَ / مَسْعِيّ إِلَيْه / مَسْعِيّ إِلَيْه", "type": "verb"},
+  {"tense1": "suspecter", "tense2": "اِشْتَبَهَ / يَشْتَبِه / اِشْتِباه / اِشْتَبِه / مُشْتَبَه فيه / مُشْتَبَه فيه", "type": "verb"},
+  {"tense1": "manifester", "tense2": "تَظاهَرَ / يَتَظاهَر / تَظاهُر / تَظاهَرْ / مُتَظاهَر بِه / مُتَظاهَر بِه", "type": "verb"},
+  {"tense1": "sensibiliser", "tense2": "وَعّى / يُوَعّي / تَوْعِيَة / وَعِّ / مُوَعّى / مُوَعّى", "type": "verb"},
+  {"tense1": "persécuter", "tense2": "اِضْطَهَدَ / يَضْطَهِد / اِضْطِهاد / اِضْطَهِدْ / مُضْطَهَد / مُضْطَهَد", "type": "verb"},
+  {"tense1": "mettre en exergue", "tense2": "أَشارَ إِلى / يُشير إِلى / إِشارَة / أَشِرْ إِلى / مُشار إِلَيْه / مُشار إِلَيْه", "type": "verb"}
 ];
 
 
