new arabic words

--- a/index.html
+++ b/index.html
@@ -1855,7 +1855,50 @@
   {"tense1": "manifester", "tense2": "تَظاهَرَ / يَتَظاهَر / تَظاهُر / تَظاهَرْ / مُتَظاهَر بِه / مُتَظاهَر بِه", "type": "verb"},
   {"tense1": "sensibiliser", "tense2": "وَعّى / يُوَعّي / تَوْعِيَة / وَعِّ / مُوَعّى / مُوَعّى", "type": "verb"},
   {"tense1": "persécuter", "tense2": "اِضْطَهَدَ / يَضْطَهِد / اِضْطِهاد / اِضْطَهِدْ / مُضْطَهَد / مُضْطَهَد", "type": "verb"},
-  {"tense1": "mettre en exergue", "tense2": "أَشارَ إِلى / يُشير إِلى / إِشارَة / أَشِرْ إِلى / مُشار إِلَيْه / مُشار إِلَيْه", "type": "verb"}
+  {"tense1": "mettre en exergue", "tense2": "أَشارَ إِلى / يُشير إِلى / إِشارَة / أَشِرْ إِلى / مُشار إِلَيْه / مُشار إِلَيْه", "type": "verb"},
+  {"tense1": "réduire", "tense2": "قَلَّصَ / يُقَلِّص / تَقْلِيص / قَلِّصْ / مُقَلَّص / مُقَلَّص", "type": "verb"},
+  {"tense1": "coordonner", "tense2": "نَسَّقَ / يُنَسِّق / تَنْسِيق / نَسِّقْ / مُنَسَّق / مُنَسَّق", "type": "verb"},
+  {"tense1": "sondage", "tense2": "اِسْتِطْلَاع / اِسْتِطْلَاعَات / اِسْتِطْلَاعَان / اِسْتِطْلَاعَاتٍ / اِسْتِطْلَاعَيْن", "type": "word"},
+  {"tense1": "obstacle", "tense2": "عَائِق / عَوَائِق / عَائِقَان / عَوَائِقٍ / عَائِقَيْن", "type": "word"},
+  {"tense1": "appliquer", "tense2": "طَبَّقَ / يُطَبِّق / تَطْبِيق / طَبِّقْ / مُطَبَّق / مُطَبَّق", "type": "verb"},
+  {"tense1": "chômage", "tense2": "بَطَالَة / بَطَالَات / بَطَالَتَان / بَطَالَاتٍ / بَطَالَتَيْن", "type": "word"},
+  {"tense1": "député", "tense2": "نَائِب / نُوَّاب / نَائِبَان / نُوَّابٍ / نَائِبَيْن", "type": "word"},
+  {"tense1": "pétition", "tense2": "مُلْتَمَس / مُلْتَمَسَات / مُلْتَمَسَان / مُلْتَمَسَاتٍ / مُلْتَمَسَيْن", "type": "word"},
+  {"tense1": "majorité", "tense2": "أَغْلَبِيَّة / أَغْلَبِيَّات / أَغْلَبِيَّتَان / أَغْلَبِيَّاتٍ / أَغْلَبِيَّتَيْن", "type": "word"},
+  {"tense1": "improbable", "tense2": "مُسْتَبْعَد / مُسْتَبْعَدَات / مُسْتَبْعَدَان / مُسْتَبْعَدَاتٍ / مُسْتَبْعَدَيْن", "type": "word"},
+  {"tense1": "dimension", "tense2": "بُعْد / أَبْعَاد / بُعْدَان / أَبْعَادٍ / بُعْدَيْن", "type": "word"},
+  {"tense1": "aspect", "tense2": "نَاحِيَة / نَوَاحٍ / نَاحِيَتَان / نَوَاحٍ / نَاحِيَتَيْن", "type": "word"},
+  {"tense1": "entre guillemet", "tense2": "بَيْنَ هِلَالَيْن", "type": "sentence"},
+  {"tense1": "ethnie", "tense2": "عِرْق / أَعْرَاق / عِرْقَان / أَعْرَاقٍ / عِرْقَيْن", "type": "word"},
+  {"tense1": "blâmer", "tense2": "لَامَ / يَلُوم / لَوْم / لُمْ / مَلُوم / مَلُوم", "type": "verb"},
+  {"tense1": "consacrer", "tense2": "خَصَّصَ / يُخَصِّص / تَخْصِيص / خَصِّصْ / مُخَصَّص / مُخَصَّص", "type": "verb"},
+  {"tense1": "appartenir", "tense2": "اِنْتَمَى / يَنْتَمِي / اِنْتِمَاء / اِنْتَمِ / مُنْتَمَى / مُنْتَمَى", "type": "verb"},
+  {"tense1": "agression", "tense2": "اِعْتِدَاء / اِعْتِدَاءَات / اِعْتِدَاءَان / اِعْتِدَاءَاتٍ / اِعْتِدَاءَيْن", "type": "word"},
+  {"tense1": "coïncider", "tense2": "تَزامَنَ / يَتَزَامَن / تَزَامُن / تَزَامَنْ / مُتَزَامَن / مُتَزَامَن", "type": "verb"},
+  {"tense1": "constitution", "tense2": "دُسْتُور / دَسَاتِير / دُسْتُورَان / دَسَاتِيرٍ / دُسْتُورَيْن", "type": "word"}
+//   {"tense1": "le pire", "tense2": "الأَبْشَع", "type": "sentence"},
+//   {"tense1": "ethnicité", "tense2": "قَوْمِيَّة / قَوْمِيَّات / قَوْمِيَّتَان / قَوْمِيَّاتٍ / قَوْمِيَّتَيْن", "type": "word"},
+//   {"tense1": "fécondité", "tense2": "إِنْجَاب / إِنْجَابَات / إِنْجَابَان / إِنْجَابَاتٍ / إِنْجَابَيْن", "type": "word"},
+//   {"tense1": "décliner", "tense2": "تَنَاقَصَ / يَتَنَاقَص / تَنَاقُص / تَنَاقَصْ / مُتَنَاقَص / مُتَنَاقَص", "type": "verb"},
+//   {"tense1": "s'occuper de", "tense2": "تَكَفَّلَ / يَتَكَفَّل / تَكَفُّل / تَكَفَّلْ / مُتَكَفَّل / مُتَكَفَّل", "type": "verb"},
+//   {"tense1": "crèche", "tense2": "حَضَانَة / حَضَانَات / حَضَانَتَان / حَضَانَاتٍ / حَضَانَتَيْن", "type": "word"},
+//   {"tense1": "statistique", "tense2": "إِحْصَاء / إِحْصَاءَات / إِحْصَاءَان / إِحْصَاءَاتٍ / إِحْصَاءَيْن", "type": "word"},
+//   {"tense1": "carrière", "tense2": "مَسِيرَة / مَسِيرَات / مَسِيرَتَان / مَسِيرَاتٍ / مَسِيرَتَيْن", "type": "word"},
+//   {"tense1": "observer", "tense2": "رَصَدَ / يَرْصُد / رَصْد / اُرْصُدْ / مَرْصُود / مَرْصُود", "type": "verb"},
+//   {"tense1": "pétition", "tense2": "عَرِيضَة / عَرَائِض / عَرِيضَتَان / عَرَائِضٍ / عَرِيضَتَيْن", "type": "word"},
+//   {"tense1": "exclusif", "tense2": "حَصْرِيّ / حَصْرِيَّات / حَصْرِيَّان / حَصْرِيَّاتٍ / حَصْرِيَّيْن", "type": "word"},
+//   {"tense1": "littérature", "tense2": "أَدَب / آدَاب / أَدَبَان / آدَابٍ / أَدَبَيْن", "type": "word"},
+//   {"tense1": "cliquer", "tense2": "نَقَرَ / يَنْقُر / نَقْر / اُنْقُرْ / مَنْقُور / مَنْقُور", "type": "verb"},
+//   {"tense1": "humour", "tense2": "فُكَاهَة / فُكَاهَات / فُكَاهَتَان / فُكَاهَاتٍ / فُكَاهَتَيْن", "type": "word"},
+//   {"tense1": "se rebeller", "tense2": "تَمَرَّدَ / يَتَمَرَّد / تَمَرُّد / تَمَرَّدْ / مُتَمَرَّد / مُتَمَرَّد", "type": "verb"},
+//   {"tense1": "émotionnelle", "tense2": "وِجْدَانِيّ / وِجْدَانِيَّات / وِجْدَانِيَّان / وِجْدَانِيَّاتٍ / وِجْدَانِيَّيْن", "type": "word"},
+//   {"tense1": "redouter", "tense2": "خَشِيَ / يَخْشَى / خَشْيَة / اِخْشَ / مَخْشِيّ / مَخْشِيّ", "type": "verb"},
+//   {"tense1": "la foule", "tense2": "حَشْد / حُشُود / حَشْدَان / حُشُودٍ / حَشْدَيْن", "type": "word"},
+//   {"tense1": "contrairement à", "tense2": "عَلَى عَكْس", "type": "sentence"},
+//   {"tense1": "révolte", "tense2": "اِنْتِفَاضَة / اِنْتِفَاضَات / اِنْتِفَاضَتَان / اِنْتِفَاضَاتٍ / اِنْتِفَاضَتَيْن", "type": "word"},
+//   {"tense1": "agresser", "tense2": "اِعْتَدَى / يَعْتَدِي / اِعْتِدَاء / اِعْتَدِ / مُعْتَدَى / مُعْتَدَى", "type": "verb"},
+//   {"tense1": "domination", "tense2": "هَيْمَنَة / هَيْمَنَات / هَيْمَنَتَان / هَيْمَنَاتٍ / هَيْمَنَتَيْن", "type": "word"},
+//   {"tense1": "berceau de", "tense2": "مَهْد لِ", "type": "sentence"}
 ];
 
 
