new arabic words

--- a/index.html
+++ b/index.html
@@ -1913,7 +1913,22 @@
   {"tense1": "Le conseil suprême", "tense2": "الْمَجْلِسُ الْأَعْلَى", "type": "sentence"},
   {"tense1": "banque", "tense2": "مَصْرِف / مَصَارِف / مَصْرِفَان / مَصَارِفَ / مَصْرِفَيْن", "type": "word"},
   {"tense1": "Nourrir", "tense2": "غَذَّى / يُغَذِّي / تَغْذِيَة / غَذِّ / يُغَذَّى / غُذِّيَ", "type": "verb"},
-  {"tense1": "affrontement", "tense2": "اِشْتِبَاك / اِشْتِبَاكَات / اِشْتِبَاكَان / اِشْتِبَاكَاتٍ / اِشْتِبَاكَيْن", "type": "word"}
+  {"tense1": "affrontement", "tense2": "اِشْتِبَاك / اِشْتِبَاكَات / اِشْتِبَاكَان / اِشْتِبَاكَاتٍ / اِشْتِبَاكَيْن", "type": "word"},
+  {"tense1": "opposé", "tense2": "مُقَابِل / مُقَابِلات / مُقَابِلان / مُقَابِلاتٍ / مُقَابِلَيْن", "type": "word"},
+  {"tense1": "légitime", "tense2": "شَرْعِيّ / شَرْعِيُّون / شَرْعِيَّان / شَرْعِيِّينَ / شَرْعِيَّيْن", "type": "word"},
+  {"tense1": "Trier", "tense2": "فَرَزَ/يَفْرِزُ/فَرْز/اِفْرِزْ/يُفْرَزُ/فُرِزَ", "type": "verb"},
+  {"tense1": "rebelle", "tense2": "عَاصٍ / عُصَاة / عَاصِيَان / عُصَاةً / عَاصِيَيْن", "type": "word"},
+  {"tense1": "Génocide", "tense2": "إِبَادَة / إِبَادَات / إِبَادَتَان / إِبَادَاتٍ / إِبَادَتَيْن", "type": "word"},
+  {"tense1": "renoncer", "tense2": "تَنَازَلَ/يَتَنَازَلُ/تَنَازُل/تَنَازَلْ/يُتَنَازَلُ/تُنُوزِلَ", "type": "verb"},
+  {"tense1": "Privilegier", "tense2": "مَيَّزَ/يُمَيِّزُ/تَمْيِيز/مَيِّزْ/يُمَيَّزُ/مُيِّزَ", "type": "verb"},
+  {"tense1": "Exiger", "tense2": "فَرَضَ/يَفْرِضُ/فَرْض/اِفْرِضْ/يُفْرَضُ/فُرِضَ", "type": "verb"},
+  {"tense1": "certificat", "tense2": "شَهَادَة / شَهَادَات / شَهَادَتَان / شَهَادَاتٍ / شَهَادَتَيْن", "type": "word"},
+  {"tense1": "Inspecter", "tense2": "فَتَّشَ/يُفَتِّشُ/تَفْتِيش/فَتِّشْ/يُفَتَّشُ/فُتِّشَ", "type": "verb"},
+  {"tense1": "restrictions", "tense2": "قَيْد / قُيُود / قَيْدَان / قُيُودًا / قَيْدَيْن", "type": "word"},
+  {"tense1": "Contredire", "tense2": "نَاقَضَ/يُنَاقِضُ/تَنَاقُض/نَاقِضْ/يُنَاقَضُ/نُوقِضَ", "type": "verb"},
+  {"tense1": "dissuader", "tense2": "رَدَعَ/يَرْدَعُ/رَدْع/اِرْدَعْ/يُرْدَعُ/رُدِعَ", "type": "verb"},
+  {"tense1": "surprendre", "tense2": "فَاجَأَ/يُفَاجِئُ/مُفَاجَأَة/فَاجِئْ/يُفَاجَأُ/فُوجِئَ", "type": "verb"},
+  {"tense1": "prudent", "tense2": "حَذِر / حَذِرُون / حَذِرَان / حَذِرِينَ / حَذِرَيْن", "type": "word"}
 ]
 
 
