--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@
                             <button class="btn btn-outline-light me-2" id="verbHintBtn" style="display: none;" onclick="showVerbHint()">
                                 <i class="fas fa-lightbulb me-2"></i>Hint
                             </button>
-                            <button class="btn btn-outline-light me-2" id="verbConjBtn" style="display: none;" onclick="showConjugation()">
+                            <!-- <button class="btn btn-outline-light me-2" id="verbConjBtn" style="display: none;" onclick="showConjugation()">
                                 <i class="fas fa-list me-2"></i>Conjugation
-                            </button>
+                            </button> -->
                             <button class="btn btn-danger-gradient" id="verbResetBtn" style="display: none;" onclick="resetVerbGame()">
                                 <i class="fas fa-redo me-2"></i>Reset
                             </button>
