--- a/index.html
+++ b/index.html
@@ -2624,7 +2624,7 @@
             document.getElementById("verbStartBtn").style.display = "none";
             document.getElementById("verbResetBtn").style.display = "inline-block";
             document.getElementById("verbNextBtn").style.display = "inline-block";
-            document.getElementById("verbConjBtn").style.display = "inline-block";
+            // document.getElementById("verbConjBtn").style.display = "inline-block";
             document.getElementById("verbHintBtn").style.display = "inline-block";
             
             showRandomVerb();
@@ -2683,7 +2683,7 @@
             document.getElementById("verbStartBtn").style.display = "inline-block";
             document.getElementById("verbResetBtn").style.display = "none";
             document.getElementById("verbNextBtn").style.display = "none";
-            document.getElementById("verbConjBtn").style.display = "none";
+            // document.getElementById("verbConjBtn").style.display = "none";
             document.getElementById("verbHintBtn").style.display = "none";
             document.getElementById("verbTranslation").style.display = "block";
 
@@ -2704,7 +2704,7 @@
             document.getElementById("verbStartBtn").style.display = "inline-block";
             document.getElementById("verbResetBtn").style.display = "none";
             document.getElementById("verbNextBtn").style.display = "none";
-            document.getElementById("verbConjBtn").style.display = "none";
+            // document.getElementById("verbConjBtn").style.display = "none";
             document.getElementById("verbHintBtn").style.display = "none";
 
             clearVerbContent();
