--- a/index.html
+++ b/index.html
@@ -289,14 +289,7 @@
         }
 
         /* Timer styling */
-        .timer-display {
-            font-size: 1rem;
-            font-weight: 700;
-            color: #4facfe;
-            text-align: center;
-            margin: 7px 0;
-            text-shadow: 0 0 10px rgba(79, 172, 254, 0.5);
-        }
+
 
 
         /* Favorite star styling */
@@ -387,7 +380,7 @@
                             <div class="stat-label">Total Games</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-value timer-display" id="numberTimer">60</div>
+                            <div class="stat-value" id="numberTimer">60</div>
                             <div class="stat-label">Seconds</div>
                         </div>
                         <div class="stat-item">
@@ -458,7 +451,7 @@
                             <div class="stat-label">Total Games</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-value timer-display" id="verbTimer">60</div>
+                            <div class="stat-value" id="verbTimer">60</div>
                             <div class="stat-label">Seconds</div>
                         </div>
                         <div class="stat-item">
@@ -503,7 +496,7 @@
                             <div class="stat-label">Total Sessions</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-value timer-display" id="expressionTimer">5:00</div>
+                            <div class="stat-value" id="expressionTimer">5:00</div>
                             <div class="stat-label">Time Left</div>
                         </div>
                     </div>
