--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             white-space: pre-line;
         }
 
+        .translation-voc {
+            font-size: 1.25;
+        }
+
         /* Buttons */
         .btn-gradient {
             background: var(--primary-gradient);
@@ -419,7 +423,7 @@
                                 onclick="toggleWordFavorite()" style="color: #ccc;"></i>
                             <div class="word-display" id="currentWord"></div>
                             <div class="word-form" id="wordForm"></div>
-                            <div class="translation" id="translation" style="display: none;"></div>
+                            <div class="translation translation-voc" id="translation" style="display: none;"></div>
                             
                             <div class="progress-custom">
                                 <div class="progress-bar-custom" id="progressBar" style="width: 0%"></div>
