--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         }
 
         .translation {
-            font-size: 2rem;
+            font-size: 1rem;
             color: #cbd5e0;
             text-align: center;
             margin: 15px 0;
@@ -132,7 +132,7 @@
         }
 
         .translation-voc {
-            font-size: 1.25;
+            font-size: 0.8;
         }
 
         /* Buttons */
@@ -425,7 +425,7 @@
                             <div class="word-form" id="wordForm"></div>
                             <div class="translation translation-voc" id="translation" style="display: none;"></div>
                             
-                            <div class="progress-custom">
+                            <div class="progress-custom" style="display: none;">
                                 <div class="progress-bar-custom" id="progressBar" style="width: 0%"></div>
                             </div>
                             <div class="text-center mb-3" id="progressText">0/50</div>
