--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             <button class="btn btn-gradient me-2" id="verbStartBtn" onclick="startVerbGame()">
                                 <i class="fas fa-play me-2"></i>Start Game
                             </button>
-                            <button class="btn btn-gradient me-2" id="verbNextBtn" style="display: none;" onclick="nextVerb()">
+                            <button class="btn btn-primary me-2" id="verbNextBtn" style="display: none;" onclick="nextVerb()">
                                 <i class="fas fa-forward me-2"></i>Next
                             </button>
                             <button class="btn btn-outline-light me-2" id="verbHintBtn" style="display: none;" onclick="showVerbHint()">
